--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,14 +6,15 @@
     <meta name="theme-color" content="#000000">
     <meta name="description" content="TrailCurrent Control System">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="TrailCurrent">
 
     <title>TrailCurrent</title>
 
-    <link rel="manifest" href="/manifest.json?100">
+    <link rel="manifest" href="/manifest.json?101">
     <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192.png">
-    <link rel="apple-touch-icon" href="/icons/icon-192.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
     <link rel="stylesheet" href="/css/theme.css">
     <link rel="stylesheet" href="/css/main.css">
